--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,7 @@
 				Demo</a></li>
 		<li><a href="mixer/dispatcherOneToMany.html">Dispatcher One To Many</a></li>
 		<li><a href="webrtc/videochat.html">Video Chat</a></li>
+		<li><a href="rtsp/playerRtsp.html">Player Rtsp</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON-RPC protocol enhances a HTTP Player by
