--- a/example/PlayerEndpoint-JackVaderFilter-WebRtcEndpoint/index.html
+++ b/example/PlayerEndpoint-JackVaderFilter-WebRtcEndpoint/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
+    <script src="adapter.js"></script>
     <script src="../../dist/KwsMedia.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
-    <video id="videoInput" autoplay />
-    <video id="videoOutput" autoplay />
+    <video id="videoOutput" autoplay></video>
   </body>
 </html>
