--- a/src/main/webapp/mixer/dispatcherOneToMany.html
+++ b/src/main/webapp/mixer/dispatcherOneToMany.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Dispatcher Mixer</title>
+<title>Dispatcher One To Many</title>
 <script src="../js/kws-content-api.js"></script>
 <script src="../lib/adapter.js"></script>
 <script>
@@ -30,7 +30,7 @@
 		});
 
 		// Create a new connection
-		var handler = "../dispatcherMixer";
+		var handler = "../dispatcherOneToMany";
 		var endpoint = handler;
 
 		// Options
@@ -90,7 +90,7 @@
 </head>
 
 <body>
-	<h1>Dispatcher</h1>
+	<h1>Dispatcher One To Many</h1>
 	<table style="border-spacing: 10px;">
 		<tr>
 			<td rowspan="10"><video id="remoteVideo" autoplay controls
