--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 				Demo</a></li>
 		<li><a href="mixer/dispatcherOneToMany.html">Dispatcher One To Many</a></li>
 		<li><a href="webrtc/videochat.html">Video Chat</a></li>
-		<li><a href="cebit/cebit.html">CeBIT</a></li>
+		<li><a href="cebit/selectable.html">CeBIT</a></li>
 		<li><a href="rtsp/playerRtsp.html">Player Rtsp</a></li>
 	</ul>
 	<div style="width: 500px;">
