--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,7 @@
 		<li><a href="webrtc/videochat.html">Video Chat</a></li>
 		<li><a href="cebit/selectable.html">CeBIT</a></li>
 		<li><a href="rtsp/playerRtsp.html">Player Rtsp</a></li>
+		<li><a href="crowd_detector/index.html">Crowd Detector Demo</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON-RPC protocol enhances a HTTP Player by
