Update CeBIT demo
Change-Id: I8ba3266e29d88467e176c3a7aad1c64cafe73262

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -96,8 +96,10 @@
 								class="glyphicon glyphicon-globe"></span> Campus Party <b
 								class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="#">Campus Party 2013 London</a></li>
-								<li><a href="#">Campus Party 2014 Brazil</a></li>
+								<li><a href="../london_demo/demo.html">Campus Party
+										2013 London</a></li>
+								<li><a href="../brazil_demo/index.html">Campus Party
+										2014 Brazil</a></li>
 							</ul></li>
 					</ul>
 
@@ -123,7 +125,8 @@
 					Pipeline</a>. To run this demo, open this URL with different computers
 				(with webcam). It also can be connected an Android mobile with the <a
 					href="https://github.com/Kurento/kas-content-demo-rtp">kas-content-demo-rtp</a>
-				application.
+				application. The server side code is available on <a
+					href="https://github.com/Kurento/kmf-content-demo/blob/develop/src/main/java/com/kurento/demo/cebit/SelectableRoomHandler.java">GitHub</a>.
 			</p>
 		</div>
 
@@ -142,7 +145,6 @@
 							class="glyphicon glyphicon-stop"></span> Terminate</a>
 					</div>
 				</div>
-
 				<br /> <br /> <label class="control-label" for="orig">Connections</label>
 				<div class="row">
 					<div class="col-md-4">
