Move common files used by several tests to common folders
Change-Id: I2bc6b930a726ef0f90fdb820322c94d69e4c33d1

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="../css/global.css">
-<link rel="stylesheet" href="selectable.css">
+<link rel="stylesheet" href="../css/selectable.css">
 <link rel="shortcut icon" href="../img/logo/logo.png" type="image/png" />
 <link href="../css/bootstrap.min.css" rel="stylesheet">
 <link href="../css/ekko-lightbox.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 <script src="../lib/adapter.js"></script>
 <script src="../lib/Console.js"></script>
 <script src="../lib/dragDrop.js"></script>
-<script src="selectable.js"></script>
+<script src="../lib/selectable.js"></script>
 </head>
 
 <body>
