--- a/example/PlayerEndpoint-HttpGetEndpoint/demo.html
+++ b/example/PlayerEndpoint-HttpGetEndpoint/demo.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="../../dist/KwsMedia.js"></script>
-    <script src="index.js"></script>
+    <script src="demo.js"></script>
   </head>
   <body>
     <video id="videoOutput" autoplay></video>
