--- a/example/WebRtcEndpoint-PointerDetectorAdvFilter_2/demo.html
+++ b/example/WebRtcEndpoint-PointerDetectorAdvFilter_2/demo.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <script src="adapter.js"></script>
+    <script src="https://webrtc.googlecode.com/svn/trunk/samples/js/base/adapter.js"></script>
     <script src="../../dist/KwsMedia.js"></script>
-    <script src="index.js"></script>
+    <script src="demo.js"></script>
   </head>
   <body>
     <input id="calibrate" type="button" value="Calibrate"/>
