Add dispatcher N to N test
Change-Id: Ibef3fd38b65750de2e4e0860a84e1f96f4dc729c

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,7 @@
 				Demo</a></li>
 		<li><a href="brazil_demo/index.html">Campus Party 2014 Brazil
 				Demo</a></li>
+		<li><a href="mixer/dispatcher.html">Dispatcher</a></li>
 		<li><a href="mixer/dispatcherOneToMany.html">Dispatcher One To Many</a></li>
 		<li><a href="webrtc/videochat.html">Video Chat</a></li>
 		<li><a href="cebit/selectable.html">CeBIT</a></li>
