Add links to top-level kurento, download epub and pdf
Change-Id: I594290d64fa058dccf072f43344bb616d92426bb

--- a/source/themes/kurento/layout.html
+++ b/source/themes/kurento/layout.html
@@ -67,6 +67,12 @@
               <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
             rel="nofollow">{{ _('Show Source') }}</a></li>
             </ul>
+            <h3>{{ _('Kurento') }}</h3>
+            <ul class="this-page-menu">
+              <li><a href="http://www.kurento.org">Kurento site</a></li>
+              <li><a href="Kurento.epub">Download docs as epub ebook</a></li>
+              <li><a href="Kurento.pdf">Download docs as PDF book</a></li>
+            </ul>
           </div>
           {%- endif %}
           {%- endblock %}
