Simplification of Selectable and Dispatcher demos
Change-Id: Ic230e7c09ed540105586bb9d55fcd1e3d355f1fe

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -139,7 +139,8 @@
 							onkeydown="if (event.keyCode == 13) start('selectable');" />
 					</div>
 					<div class="col-md-7 text-right">
-						<a id="start" href="#" class="btn btn-success" onclick="start('selectable');"><span
+						<a id="start" href="#" class="btn btn-success"
+							onclick="start('selectable');"><span
 							class="glyphicon glyphicon-play"></span> Start</a> <a id="terminate"
 							href="#" class="btn btn-danger" onclick="terminate();"><span
 							class="glyphicon glyphicon-stop"></span> Terminate</a>
@@ -148,7 +149,7 @@
 				<br /> <br /> <label class="control-label" for="orig">Connections</label>
 				<div class="row">
 					<div class="col-md-4">
-						<select id="dest" class="form-control"></select>
+						<select id="orig" class="form-control"></select>
 					</div>
 					<div class="col-md-4 text-center">
 						<a id="connect" href="#" class="btn btn-primary"
@@ -156,7 +157,7 @@
 							class="glyphicon glyphicon-resize-horizontal"></span> Connect</a>
 					</div>
 					<div class="col-md-4">
-						<select id="orig" class="form-control"></select>
+						<select id="dest" class="form-control"></select>
 					</div>
 				</div>
 				<br />
