More test for Node.js & browser
Change-Id: I8b41fc3a7182409587ea62cbb4abb46fab600f56

--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,11 @@
 
     <script src="BasicPipeline.js"></script>
     <script src="FaceOverlayFilter.js"></script>
+    <script src="GStreamerFilter.js"></script>
+    <script src="HttpGetEndpoint.js"></script>
     <script src="PlayerEndpoint.js"></script>
+    <script src="PlateDetectorFilter.js"></script>
+    <script src="PointerDetectorFilter.js"></script>
     <script src="ZBarFilter.js"></script>
   </body>
 </html>
