Added new tests (HTTP Upload, RTSP Player, Crowd/Pointer Detector, MongoDB Repository, Mixer)
Change-Id: I8093f8d48bd1a24cfd7ce3106e6065f7bba48853

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,9 @@
 	<ul>
 		<li><a href="player.html">HTTP Player</a></li>
 		<li><a href="playerJson.html">HTTP Player with JSON protocol</a><sup>*</sup></li>
+		<li><a href="recorder.html">HTTP Recorder</a></li>
 		<li><a href="webrtc.html">WebRTC</a></li>
+		<li><a href="mixer/dispatcher.html">Mixer (dispatcher)</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
