Renamed package & namespace from KwsMedia to kws-media-api & kwsMediaApi
Change-Id: I8266e76ba8c370aa155683211ede62a7ece59099

--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
     <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
     <script src="../node_modules/wock/dist/wock.js"></script>
 
-    <script src="../dist/KwsMedia.js"></script>
+    <script src="../dist/kws-media-api.js"></script>
   </head>
   <body>
     <div id="qunit"></div>
